--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,79 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+	margin: 0;
+	padding: 0;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.nav {
+	background-color: #333;
+	padding: 1rem 0;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+ul {
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: space-between;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+li {
+	display: block;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.headerLink {
+	color: #fff;
+	margin: 0 2rem;
+	font-size: 1.2rem;
+	font-weight: bold;
+	text-decoration: none; 
+  display: block; 
+  padding: 10px 15px; 
+}
+
+.homeBoxTexts {
+  height: 150px;
+  margin-left: 5%;
+}
+
+.loadingMessage {
+  margin: 40px 0 0 0;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.errorHandring {
+	margin: 40px 0 0 0;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.goHomeBtn {
+	margin: 20px auto;
+	width: 120px;
+  text-align: center;
+	display: block;
+	text-decoration: none;
+	padding: 10px 18px;
+  color: rgb(255 255 255);
+  background-color: rgb(31 41 55);
+  border: none;
+  border-radius: 8px;
+  font-size: 1.15rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.resetBtn {
+	margin: 20px auto;
+	width: 100px;
+  text-align: center;
+	display: block;
+	text-decoration: none;
+	padding: 10px 18px;
+  color: rgb(255 255 255);
+  background-color: rgb(31 41 55);
+  border: none;
+  border-radius: 8px;
+  font-size: 1.15rem;
+  font-weight: bold;
+  cursor: pointer;
 }
