--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,3 +77,148 @@ li {
   font-weight: bold;
   cursor: pointer;
 }
+
+.sidebar {
+  display: flex;
+}
+
+.adminMain {
+  padding: 1rem;
+  width: 75%;
+}
+
+.sidebarMenu {
+  width: 25%;
+  height: 100vh;
+  background-color: #e6e7ee;
+}
+
+.sidebarItems {
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebarMenuLink {
+  font-weight: bold;
+  padding: 1rem;
+  text-decoration: none;
+  color: #333;
+  display: block;
+}
+
+.sidebarMenuLink:hover {
+  background-color: #9ec2ff;
+}
+
+/* adminページ */
+.adminTitle {
+  font-size: 1.5rem;
+  color: #333;
+  font-weight: bold;
+}
+
+.adminForm {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.adminFormTitle {
+  font-size: 1rem;
+  color: #4d4f5b;
+}
+
+.adminLine {
+  height: 0.8px;
+  background-color: #b7b8be;
+  border: none;
+}
+
+/* admin: 記事一覧 */
+.adminSubMenu {
+  display: flex;
+  justify-content: space-between;
+}
+
+.adminContentList {
+  margin: 4rem 0 0 0;
+}
+
+.adminCreateButton {
+  margin: 0 1rem;
+	width: 100px;
+  line-height: 2.4;
+  text-align: center;
+	display: block;
+	text-decoration: none;
+	padding: 10px 18px;
+  color: rgb(255 255 255);
+  background-color: rgb(31 41 55);
+  border: none;
+  border-radius: 8px;
+  font-size: 1.15rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.adminContentLink {
+  text-decoration: none;
+}
+
+.adminContentTitle {
+  font-size: 1rem;
+  font-weight: bold;
+  color: #4d4f5b;
+}
+
+.adminContentDate {
+  font-size: 1rem;
+  color: #b7b8be;
+}
+
+.adminContent {
+  margin: 1rem;
+}
+
+/* admin: フォーム */
+.adminFormInput {
+  margin: 4px 0 15px 0;
+  min-height: 30px;
+  border: 1px solid #b7b8be;
+  border-radius: 5px;
+  font-size: 1.15rem;
+}
+
+.adminFormInputContent {
+  margin: 4px 0 15px 0;
+  min-height: 60px;
+  border: 1px solid #b7b8be;
+  border-radius: 5px;
+  font-size: 1.15rem;
+}
+
+.adminFormSubmitBtn {
+  width: 80px;
+  margin: 10px 0 0 0;
+  padding: 8px 18px 10px;
+  color: rgb(255 255 255);
+  background-color: #4085fd;
+  border: none;
+  border-radius: 8px;
+  font-size: 1.15rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.adminFormDeleteBtn {
+  width: 80px;
+  margin: 10px 0 0 10px;
+  padding: 8px 18px 10px;
+  color: rgb(255 255 255);
+  background-color: #fd4d40;
+  border: none;
+  border-radius: 8px;
+  font-size: 1.15rem;
+  font-weight: bold;
+  cursor: pointer;
+}
