--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -46,7 +46,11 @@
 }
 
 .homeBoxTexts {
-  margin-left: 5%;
+  margin: 0 0 5% 5%;
+}
+
+.homeBoxText {
+  max-width: 70%;
 }
 
 .homeBoxTextsTitle {
